-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11.0.9, 17, 18, 19
-
Component/s: hotspot
-
b03
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8297322 | 17.0.6 | Aleksey Shipilev | P4 | Resolved | Fixed | b04 |
Providing '-XX:ShenandoahGCMode=' or '-XX:ShenandoahGCHeuristics=' (when parsed) causes a crash without meaningful info. E.g.:
java -XX:+UseShenandoahGC -XX:ShenandoahGCMode= -version
java -XX:+UseShenandoahGC -XX:ShenandoahGCMode=satb -XX:ShenandoahGCHeuristics= -version
java -XX:+UseShenandoahGC -XX:+UnlockExperimentalVMOptions -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics= -version
java -XX:+UseShenandoahGC -XX:+UnlockDiagnosticVMOptions -XX:ShenandoahGCMode=passive -XX:ShenandoahGCHeuristics= -version
Instead it can be reported similar to '=wrong', e.g:
Error occurred during initialization of VM
Unknown -XX:ShenandoahGCMode option (null)
java -XX:+UseShenandoahGC -XX:ShenandoahGCMode= -version
java -XX:+UseShenandoahGC -XX:ShenandoahGCMode=satb -XX:ShenandoahGCHeuristics= -version
java -XX:+UseShenandoahGC -XX:+UnlockExperimentalVMOptions -XX:ShenandoahGCMode=iu -XX:ShenandoahGCHeuristics= -version
java -XX:+UseShenandoahGC -XX:+UnlockDiagnosticVMOptions -XX:ShenandoahGCMode=passive -XX:ShenandoahGCHeuristics= -version
Instead it can be reported similar to '=wrong', e.g:
Error occurred during initialization of VM
Unknown -XX:ShenandoahGCMode option (null)
- backported by
-
JDK-8297322 Print error if Shenandoah flags are empty (instead of crashing)
-
- Resolved
-