8278826: Print error if Shenandoah flags are empty (instead of crashing)

Backport-of: 247ea71d24a251d29d9a5179e5b773df850e7261